2009-10-19  Teika kazura <teika@lavabit.com>
	* OPTIONS
	* lisp/sawfish/wm/ext/apps-menu.jl
	* man/news.texi
	* man/sawfish.texi: Completed doc updates for applications menu.

	* lisp/sawfish/wm/commands/grow-pack.jl
	* man/sawfish.texi: grow-pack doc upgrade.

2009-10-17  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/apps-menu.jl: removed dupped Development Category from Developmentmenu
	                                    added Editors Category to Developmentmenu
	                                    make use of global `xterm-prgoram' instead of local `my-term-string'

	* OPTIONS: updated for Teikas changes

	* lisp/sawfish/wm/menus.jl: updated "Reload Appsmenu" entry to call new `update-apps-menu' instead of `update-saw-menu'

	* man/sawfish.texi: added docs for several functions and variables:
				- grow-window-up
				- grow-window-down
				- grow-window-left
				- grow-window-right
				- shrink-window-up
				- shrink-window-down
				- shrink-window-left
				- shrink-window-right
				- pack-window-up
				- pack-window-down
				- pack-window-left
				- pack-window-right
				- yank-window-up
				- yank-window-down
				- yank-window-left
				- yank-window-right
				- grow-is-maximize
				- pack-warp-pointer
				- grow-pack-bump-obscured
				- grow-pack-bump-other-depth
				- grow-pack-bump-ignored
				- shrink-window-minimum-size
				- yank-window-minimum-visible

	* NEED_DOC_BEFORE_1_6_0: added (general reminder about missing docs)

2009-10-16  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/user.jl
	* lisp/sawfish/wm/ext/apps-menu.jl: User can prepend their own apps-menu to the auto generated one. Cleanups, mostly in variables.

	* README.IMPORTANT
	* man/news.texi: News rewritement.

2009-10-15  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/defaults.jl
	* lisp/sawfish/wm/user.jl
	* man/faq.texi
	* man/news.texi: News and doc that sawfish.wm.defaults is always read, regardless of .sawfishrc existence.
