@@ -1,3 +1,8 @@
+2009-10-22  Teika kazura <teika@lavabit.com>
+	* OPTIONS
+	* lisp/sawfish/wm/ext/apps-menu.jl
+	* man/sawfish.texi: Doc improvements on applications menu.
+
 2009-10-19  Teika kazura <teika@lavabit.com>
 	* OPTIONS
 	* lisp/sawfish/wm/ext/apps-menu.jl
